--- a/unit-tests/index.html
+++ b/unit-tests/index.html
@@ -9,7 +9,7 @@
   <script src="jquery.eventsource.unit.js"></script>
 </head>
 <body>
-  <h1 id="qunit-header">jquery.eventsource.unit.js</h1>
+  <h1 id="qunit-header">jquery.eventsource.unit.js - must pass 100% in: Chrome, FF, Opera, Safari & IE</h1>
   <h2 id="qunit-banner"></h2>
   <h2 id="qunit-userAgent"></h2>
   <ol id="qunit-tests"></ol>
