updates to demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -18,7 +18,8 @@
   <header> 
     <h1>Yak-Yak</h1> 
     <p>
-    Hint: type ?gb
+    <a href="http://github.com/rwldrn/jquery.eventsource">Source Available At Github</a> 
+    <span id="hint">Hint: type ?gb</span>
     </p>      
   </header> 
   <section> 
