--- a/demo/index.html
+++ b/demo/index.html
@@ -38,6 +38,7 @@
     <h1>Yak-Yak</h1> 
     <p>
       <a href="http://github.com/rwldrn/jquery.eventsource">Source Available At Github</a> 
+      <span id="hint">Hint: type ?gb</span>
     </p>      
   </header>
   <section> 
@@ -57,7 +58,8 @@
       </form>  
     </span>    
   </footer> 
-
+  
+  
   
   <script src="yakyak-twitter.js"></script>
   
