Added stream.history object property; Added Specit tests

--- a/unit-tests/index.html
+++ b/unit-tests/index.html
@@ -5,11 +5,13 @@
   <link rel="stylesheet" href="http://github.com/jquery/qunit/raw/master/qunit/qunit.css" type="text/css" media="screen" />
   <script src="http://code.jquery.com/jquery-latest.js"></script>
   <script src="http://github.com/jquery/qunit/raw/master/qunit/qunit.js"></script>
+  
   <script src="../jquery.eventsource.js"></script>
   <script src="jquery.eventsource.unit.js"></script>
+
 </head>
 <body>
-  <h1 id="qunit-header">jquery.eventsource.unit.js - must pass 100% in: Chrome, FF, Opera, Safari & IE</h1>
+  <h1 id="qunit-header">jquery.eventsource.unit.js - must pass 100% in: Chrome, FF, Opera, Safari & IE (<a href="specit.html">specit tests</a>)</h1>
   <h2 id="qunit-banner"></h2>
   <h2 id="qunit-userAgent"></h2>
   <ol id="qunit-tests"></ol>
