--- a/unit-tests/specit.html
+++ b/unit-tests/specit.html
@@ -2,6 +2,7 @@
                     "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
+  <title>jquery.eventsource.specit</title>
   <link rel="stylesheet" href="http://github.com/jquery/qunit/raw/master/qunit/qunit.css" type="text/css" media="screen" />
   <script src="http://code.jquery.com/jquery-latest.js"></script>
   <script src="http://github.com/jquery/qunit/raw/master/qunit/qunit.js"></script>
