--- a/unit-tests/index.html
+++ b/unit-tests/index.html
@@ -12,9 +12,12 @@
 
 </head>
 <body>
-  <h1 id="qunit-header">jquery.eventsource.unit.js - must pass 100% in: Chrome, FF, Opera, Safari & IE (<a href="specit.html">specit tests</a>)</h1>
+  <h1 id="qunit-header">jquery.eventsource.unit.js - must pass 100% in: Chrome, FF, Opera, Safari & IE <!--(<a href="specit.html">specit tests</a>)--></h1>
   <h2 id="qunit-banner"></h2>
   <h2 id="qunit-userAgent"></h2>
   <ol id="qunit-tests"></ol>
  </body>
+ 
+ <iframe src="specit.html" style="width:100%;height:600px;border:0px;"></iframe>
+ 
 </html>
