Moves example files to eg/

--- a/eg/index.html
+++ b/eg/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>jQuery.eventsource.js</title>
-    <script src="http://code.jquery.com/jquery.js"></script> 
-    <script src="jquery.eventsource.js"></script>
+    <script src="http://code.jquery.com/jquery-latest.js"></script> 
+    <script src="../jquery.eventsource.js"></script>
     <script src="example.js"></script>
   </head>
 <body>
