--- a/test/index.html
+++ b/test/index.html
@@ -1,11 +1,12 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" 
-                    "http://www.w3.org/TR/html4/loose.dtd">
+<!doctype html>
 <html>
 <head>
+  <meta charset="UTF-8" />
   <title>jquery.eventsource.unit</title>
-  <link rel="stylesheet" href="http://github.com/jquery/qunit/raw/master/qunit/qunit.css" type="text/css" media="screen" />
-  <script src="http://code.jquery.com/jquery-latest.js"></script>
-  <script src="http://github.com/jquery/qunit/raw/master/qunit/qunit.js"></script>
+  
+  <link href="qunit/qunit.css" type="text/css" media="screen">
+  <script src="//code.jquery.com/jquery.js"></script>
+  <script src="qunit/qunit.js"></script>
   
   <script src="../jquery.eventsource.js"></script>
   <script src="jquery.eventsource.unit.js"></script>
@@ -14,10 +15,14 @@
 <body>
   <h1 id="qunit-header">jquery.eventsource.unit.js - must pass 100% in: Chrome, FF, Opera, Safari & IE <!--(<a href="specit.html">specit tests</a>)--></h1>
   <h2 id="qunit-banner"></h2>
+  <div id="qunit-testrunner-toolbar"></div>
   <h2 id="qunit-userAgent"></h2>
   <ol id="qunit-tests"></ol>
+  <div id="qunit-fixture">
+  </div>
+
  </body>
  
- <iframe src="specit.html" style="width:100%;height:600px;border:0px;"></iframe>
+<iframe src="specit.html" style="width:100%;height:600px;border:0px;"></iframe>
  
 </html>
