--- a/test/specit.html
+++ b/test/specit.html
@@ -1,12 +1,14 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" 
-                    "http://www.w3.org/TR/html4/loose.dtd">
+<!doctype html>
 <html>
 <head>
+  <meta charset="UTF-8" />
   <title>jquery.eventsource.specit</title>
-  <link rel="stylesheet" href="http://github.com/jquery/qunit/raw/master/qunit/qunit.css" type="text/css" media="screen" />
-  <script src="http://code.jquery.com/jquery-latest.js"></script>
-  <script src="http://github.com/jquery/qunit/raw/master/qunit/qunit.js"></script>
-  <script src="http://github.com/joshuaclayton/specit/raw/master/specit.js"></script>
+  
+  <link href="qunit/qunit.css" type="text/css" media="screen">
+  <script src="//code.jquery.com/jquery.js"></script>
+  <script src="qunit/qunit.js"></script>
+
+  <script src="//github.com/joshuaclayton/specit/raw/master/specit.js"></script>
   
   <script src="../jquery.eventsource.js"></script>
   <script src="jquery.eventsource.specit.js"></script>
