Updates to test runners

--- a/test/specit.html
+++ b/test/specit.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <title>jquery.eventsource.specit</title>
   
-  <link href="qunit/qunit.css" type="text/css" media="screen">
-  <script src="//code.jquery.com/jquery.js"></script>
+  <link href="qunit/qunit.css" rel="stylesheet">
+  <script src="http://code.jquery.com/jquery.js"></script>
   <script src="qunit/qunit.js"></script>
 
   <script src="//github.com/joshuaclayton/specit/raw/master/specit.js"></script>
@@ -31,7 +31,11 @@
 <body>
   <h1 id="qunit-header">jquery.eventsource.specit.js - must pass 100% in: Chrome, FF, Opera, Safari & IE  <!--(<a href="index.html">unit tests</a>)-->\</h1>
   <h2 id="qunit-banner"></h2>
+  <div id="qunit-testrunner-toolbar"></div>
   <h2 id="qunit-userAgent"></h2>
   <ol id="qunit-tests"></ol>
+  <div id="qunit-fixture">
+  </div>
+
  </body>
 </html>
