--- a/test/index.html
+++ b/test/index.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8" />
   <title>jquery.eventsource.unit</title>
   
-  <link href="qunit/qunit.css" type="text/css" media="screen">
-  <script src="//code.jquery.com/jquery.js"></script>
+  <link href="qunit/qunit.css" rel="stylesheet">
+
+  <script src="http://code.jquery.com/jquery.js"></script>
   <script src="qunit/qunit.js"></script>
   
   <script src="../jquery.eventsource.js"></script>
