--- a/test/index.html
+++ b/test/index.html
@@ -1,12 +1,11 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" 
-                    "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html>
 <head>
   <title>jquery.eventsource.unit</title>
-  <link rel="stylesheet" href="http://github.com/jquery/qunit/raw/master/qunit/qunit.css" type="text/css" media="screen" />
+  <link rel="stylesheet" href="https://raw.github.com/jquery/qunit/master/qunit/qunit.css" type="text/css" media="screen" />
   <script src="http://code.jquery.com/jquery-latest.js"></script>
-  <script src="http://github.com/jquery/qunit/raw/master/qunit/qunit.js"></script>
-  
+  <script src="https://raw.github.com/jquery/qunit/master/qunit/qunit.js"></script>
+
   <script src="../jquery.eventsource.js"></script>
   <script src="jquery.eventsource.unit.js"></script>
 
@@ -17,7 +16,7 @@
   <h2 id="qunit-userAgent"></h2>
   <ol id="qunit-tests"></ol>
  </body>
- 
+
  <iframe src="specit.html" style="width:100%;height:600px;border:0px;"></iframe>
- 
+
 </html>
