--- a/test/specit.html
+++ b/test/specit.html
@@ -1,27 +1,27 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" 
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
                     "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
   <title>jquery.eventsource.specit</title>
-  <link rel="stylesheet" href="http://github.com/jquery/qunit/raw/master/qunit/qunit.css" type="text/css" media="screen" />
+  <link rel="stylesheet" href="https://raw.github.com/jquery/qunit/master/qunit/qunit.css" type="text/css" media="screen" />
   <script src="http://code.jquery.com/jquery-latest.js"></script>
-  <script src="http://github.com/jquery/qunit/raw/master/qunit/qunit.js"></script>
-  <script src="http://github.com/joshuaclayton/specit/raw/master/specit.js"></script>
-  
+  <script src="https://raw.github.com/jquery/qunit/master/qunit/qunit.js"></script>
+  <script src="https://raw.github.com/joshuaclayton/specit/master/specit.js"></script>
+
   <script src="../jquery.eventsource.js"></script>
   <script src="jquery.eventsource.specit.js"></script>
-  
+
   <script>
-  
+
   $(function () {
 
     if(top.location != location) {
-      
+
       $('body').css({
         marginLeft: '0px',
         marginTop: '0px'
       });
-      
+
     }
   });
   </script>
