Update latest qunit
Signed-off-by: Rick Waldron <waldron.rick@gmail.com>

--- a/test/specit.html
+++ b/test/specit.html
@@ -3,27 +3,27 @@
 <head>
   <meta charset="UTF-8" />
   <title>jquery.eventsource.specit</title>
-  
-  <link href="qunit/qunit.css" rel="stylesheet">
+
+  <link href="http://code.jquery.com/qunit/qunit-git.css" rel="stylesheet">
   <script src="http://code.jquery.com/jquery.js"></script>
   <script src="qunit/qunit.js"></script>
 
   <script src="//github.com/joshuaclayton/specit/raw/master/specit.js"></script>
-  
+
   <script src="../jquery.eventsource.js"></script>
   <script src="jquery.eventsource.specit.js"></script>
-  
+
   <script>
-  
+
   $(function () {
 
     if(top.location != location) {
-      
+
       $('body').css({
         marginLeft: '0px',
         marginTop: '0px'
       });
-      
+
     }
   });
   </script>
