--- a/test/index.html
+++ b/test/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <title>jquery.eventsource.unit</title>
-  
-  <link href="qunit/qunit.css" rel="stylesheet">
+
+  <link href="http://code.jquery.com/qunit/qunit-git.css" rel="stylesheet">
 
   <script src="http://code.jquery.com/jquery.js"></script>
-  <script src="qunit/qunit.js"></script>
-  
+  <script src="http://code.jquery.com/qunit/qunit-git.js"></script>
+
   <script src="../jquery.eventsource.js"></script>
   <script src="jquery.eventsource.unit.js"></script>
 
@@ -23,7 +23,7 @@
   </div>
 
  </body>
- 
+
 <iframe src="specit.html" style="width:100%;height:600px;border:0px;"></iframe>
- 
+
 </html>
